samples/_failures_safe/1761540764_931a0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a94fbf9e.c: In function ‘main’:
./samples/SAFE/__tmp_a94fbf9e.c:158:9: error: expected expression at end of input
  158 |         if (scanf("%d %d %d", &u, &v, &weight) !=
      |         ^~
./samples/SAFE/__tmp_a94fbf9e.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a94fbf9e.c:158:9: error: expected declaration or statement at end of input
